--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,44 @@
   <title>Isabella Keith</title>
 </head>
 <body>
-  
+  <header>
+    <nav>
+      <ul>
+        <li><a href="#about">About Me</a></li>
+        <li><a href="#resume">Resume</a></li>
+        <li><a href="#contact">Contact Info</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <section id="about">
+      <div>
+        <h1>About Me</h1>
+        <p>Hi, I'm Bella. I'm a digital productivity specialist and content creator passionate about helping others streamline their workflows and maximize their potential through thoughtful systems and technology.</p>
+      </div>
+      <div>
+        <h2>What I Do</h2>
+        <p>I work at the intersection of productivity and creativity, helping individuals and businesses:</p>
+        <ul>
+          <li>Design efficient digital workspaces</li>
+          <li>Implement sustainable productivity systems</li>
+          <li>Create engaging content for online audiences</li>
+          <li>Optimize workflow processes</li>
+        </ul>
+      </div>
+      <div>
+        <h2>Let's Connect</h2>
+        <p>I'm always excited to collaborate with like-minded individuals and businesses. Whether you're looking to streamline your workflow, enhance your productivity, or create engaging content, I'd love to help you reach your goals.</p>
+        <p>Feel free to reach out through any of my social channels or drop me a message below.</p>
+      </div>
+      </section>
+    <section id="resume">
+      <h2>Resume</h2>
+      <p>Here is my resume:</p>
+      <a href="" download>Download Resume</a>
+    </section>
+    <section id="contact">
+      <h2>Contact Info</h2>
+      <p>Email: bellafreesh@gmail.com <br> Phone: (469)215-4443</p>
 </body>
 </html>
