Update index.html to correct stylesheet path and enhance contact section links

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="./output.css" rel="stylesheet">
+  <link href="./css/output.css" rel="stylesheet">
   <title>Isabella Keith</title>
 </head>
 <body>
@@ -41,10 +41,10 @@
     <section id="resume">
       <h2>Resume</h2>
       <p>Here is my resume:</p>
-      <a href="" download>Download Resume</a>
+      <a href="./resources/Isabella_Keith_Resume.pdf" download>Download Resume</a> <!-- make button -->
     </section>
     <section id="contact">
       <h2>Contact Info</h2>
-      <p>Email: bellafreesh@gmail.com <br> Phone: (469)215-4443</p>
+      <p>Email: <a>bellafreesh@gmail.com</a> <br> Phone: <a>(469)215-4443</a></p>
 </body>
 </html>
