--- a/src/index.html
+++ b/src/index.html
@@ -1,50 +1,112 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="./css/output.css" rel="stylesheet">
-  <title>Isabella Keith</title>
-</head>
-<body>
-  <header>
-    <nav>
-      <ul>
-        <li><a href="#about">About Me</a></li>
-        <li><a href="#resume">Resume</a></li>
-        <li><a href="#contact">Contact Info</a></li>
-      </ul>
-    </nav>
-  </header>
-  <main>
-    <section id="about">
-      <div>
-        <h1>About Me</h1>
-        <p>Hi, I'm Bella. I'm a digital productivity specialist and content creator passionate about helping others streamline their workflows and maximize their potential through thoughtful systems and technology.</p>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="./css/output.css" rel="stylesheet" />
+    <title>Isabella Keith</title>
+  </head>
+  <body class="bg-rose-10 text-rose-60">
+    <header
+      class="bg-rose-20 flex justify-between items-center p-4 border-b-rose-60 border-b mb-2"
+    >
+      <div class="flex flex-col px-3">
+        <h1 class="font-bold">Isabella</h1>
+        <h1 class="font-bold">Keith</h1>
       </div>
-      <div>
-        <h2>What I Do</h2>
-        <p>I work at the intersection of productivity and creativity, helping individuals and businesses:</p>
-        <ul>
-          <li>Design efficient digital workspaces</li>
-          <li>Implement sustainable productivity systems</li>
-          <li>Create engaging content for online audiences</li>
-          <li>Optimize workflow processes</li>
+      <nav>
+        <ul class="flex space-x-4">
+          <li class="underline hover:text-rose-50 active:text-rose-40">
+            <a href="#about">About Me</a>
+          </li>
+          <li class="underline hover:text-rose-50 active:text-rose-40">
+            <a href="#resume">Resume</a>
+          </li>
+          <li class="underline hover:text-rose-50 active:text-rose-40">
+            <a href="#contact">Contact Info</a>
+          </li>
         </ul>
-      </div>
-      <div>
-        <h2>Let's Connect</h2>
-        <p>I'm always excited to collaborate with like-minded individuals and businesses. Whether you're looking to streamline your workflow, enhance your productivity, or create engaging content, I'd love to help you reach your goals.</p>
-        <p>Feel free to reach out through any of my social channels or drop me a message below.</p>
-      </div>
+      </nav>
+    </header>
+    <main>
+      <section id="about">
+        <div class="m-4 justify-center align-center">
+          <h1 class="font-bold text-2xl mb-2">About Me</h1>
+          <p class="">
+            Hi, I'm <a class="text-rose-40 font-semibold">Bella</a>. I'm a
+            digital productivity specialist and content creator passionate about
+            helping others streamline their workflows and maximize their
+            potential through thoughtful systems and technology.
+          </p>
+        </div>
+        <section class="flex justify-between space-x-4 m-4">
+          <div class="w-1/2 m-1">
+            <h2 class="text-xl font-semibold underline">What I Do</h2>
+            <p>
+              I work at the intersection of productivity and creativity, helping
+              individuals and businesses:
+            </p>
+            <ul class="list-disc list-inside pl-5">
+              <li class="py-1">Design efficient digital workspaces</li>
+              <li class="py-1">Implement sustainable productivity systems</li>
+              <li class="py-1">Create engaging content for online audiences</li>
+              <li class="py-1">Optimize workflow processes</li>
+            </ul>
+          </div>
+          <div class="w-1/2 m-1">
+            <h2 class="text-xl font-semibold underline">Let's Connect</h2>
+            <p class="py-1 indent-8 pr-2">
+              I'm always excited to collaborate with like-minded individuals and
+              businesses. Whether you're looking to streamline your workflow,
+              enhance your productivity, or create engaging content, I'd love to
+              help you reach your goals.
+            </p>
+            <p class="py-1 indent-8 pr-2">
+              Feel free to reach out through any of my social channels or drop
+              me a message below.
+            </p>
+          </div>
+        </section>
       </section>
-    <section id="resume">
-      <h2>Resume</h2>
-      <p>Here is my resume:</p>
-      <a href="./resources/Isabella_Keith_Resume.pdf" download>Download Resume</a> <!-- make button -->
-    </section>
-    <section id="contact">
-      <h2>Contact Info</h2>
-      <p>Email: <a>bellafreesh@gmail.com</a> <br> Phone: <a>(469)215-4443</a></p>
-</body>
+      <section id="resume" class="m-4">
+        <h2 class="text-xl font-semibold">Resume</h2>
+        <object
+          data="./resources/Isabella_Keith_Resume.pdf"
+          type="application/pdf"
+          class="h-96 w-[90%]"
+        >
+          <p class="w-full">Your browser doesn't support pdf's.</p>
+        </object>
+        <a
+          href="./resources/Isabella_Keith_Resume.pdf"
+          download
+          class="underline hover:text-rose-50 active:text-rose-40"
+          >Download</a
+        >
+        <!-- make button -->
+      </section>
+      <section id="contact" class="m-4">
+        <h2 class="text-xl font-semibold">Contact Info</h2>
+        <div class="flex justify-around space-x-4 w-full pb-2">
+          <p>
+            Email:
+            <a class="underline hover:text-rose-50 active:text-rose-40"
+              >bellafreesh@gmail.com</a
+            >
+          </p>
+          <p>
+            Phone:
+            <a class="underline hover:text-rose-50 active:text-rose-40"
+              >(469)215-4443</a
+            >
+          </p>
+        </div>
+      </section>
+      <footer
+        class="bg-rose-20 flex justify-center items-center p-4 border-t-rose-60 border-t mt-2"
+      >
+        <p class="text-rose-40">© 2025 Isabella Keith.</p>
+      </footer>
+    </main>
+  </body>
 </html>
